# syllabus_backend

./: .dockerignore  .env.sample  .gitattributes  .gitignore  DB.md  Dockerfile  README.md  cursor.md  debug_log.txt  develop-doc.ps1  docker-compose.yml  get-pip.py  init.sql.template  project_version.txt  pyproject.toml  requirements.txt  syllabus.sh  test_similarity.py  version.txt
.cursor/: querry.mdc
.cursor/rules/: cm.mdc  dbupdte.mdc  general-rule.mdc  git.mdc  querry.mdc
.github/workflows/: teams-notification.yml
db/: README.md  syllabus.db
db/init/: create_database.py
docker/: .env.sample
docker-entrypoint-initdb.d/migrations/: V20250531092230__insert_books.sql
docker/api/: Dockerfile  requirements.txt
docker/fastapi/: Dockerfile  docker-compose.yml  pyproject.toml
docker/fastapi/app/: Dockerfile  main.py  pyproject.toml  requirements.txt  trainer_query.py
docker/postgre/: Dockerfile  docker-compose.yml
docker/postgresql/: Dockerfile  check-postgres.ps1  check-with-dev-db.ps1  deploy-migration.ps1  dev_check.ps1  docker-compose.yml  generate-init.sh  postgresql.conf  start-postgres.ps1  stop-postgres.ps1
docs/: cursor.md  database_er.md  database_policy.md  database_python.md  database_structure.md  database_update_workflow.md  db_operation_manual.md  doc.md  docker.md  docker_structure.md  docker_structure_develop.md  git_commit_policy.md  githelp.md  postgresql.md  server.md  trainer_index.md  trouble_shoot.md  version_control.md
docs/database/: er.md  jsonb_cache.md  jsonb_cache_samples.md  jsonb_training_policy.md  policy.md  python.md  structure.md  updateflow.md
docs/docker/: docker.md  fastapi.md  postgresql.md  server.md
docs/python/: 06_book.md  07_book.md  12_lecture_session.md  README.md  create_database.md  database.md  generate_migration.py.md  manual_migrate.md  models.md  parsers.md  raw_page_parser.md  update_db.md  utils.md  version_control.py
docs/sh/: check-with-dev-db.md  deploy-migration.md  generate-migration.md  git_bump.md  init-directories.md  init-updates.md  os_compatibility.md  start-postgres.md  stop-postgres.md  syllabus.md
postgre/: postgresql.conf
postgre/docker-entrypoint-initdb.d/: 01_init.sql
python/: models.py
scripts/: generate_migration.py
sh/: cache_tester.sh
src/: __init__.py  init.sql.template  main.py  models.py
src/course_guide/: requirement_header.csv
src/db/: __init__.py  check_syllabus_time.py  create_database.py  database.py  mcp_comments.py  models.py  raw_page_parser.py  requirements.txt  reset_syllabus_time.py  sql_where_yaml.py  trainer_index.py  update_db.py
src/parser/: 06_book.py
tests/: cache_sample3.sql  cache_sample3_test.sql  chinou_book.sql  db_check_1.out  db_check_1.sql  debug_structure.sql  debugger.sql  denshi.out  denshi.sql  denshi_book.sql  kikai_kihon_time.sql  kikai_text.sql  math_noexam.out  math_noexam.sql  math_noreport.sql  math_required.sql  math_text.sql  sample.sql  sample2.sql  subject_name.sql
tests/json_output/: full_cache.json.raw  intelligent_info_courses.json.raw
trainer/debug/: check_aoi_name.sql  check_expensive_books_in_cache.sql  check_most_expensive_book.sql  check_subjects_in_cache.sql  check_subjects_using_expensive_books.sql  check_textbook_data.sql  debug_join_comparison.sql  (+9 more)
updates/: init_directories.ps1  init_updates.ps1
(+7566 files in other folders)
