[tool.poetry]
name = "syllabus-backend"
version = "0.1.0"
description = "シラバス情報提供バックエンドAPI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
prometheus-client = "^0.19.0"
fastapi-health = "^0.4.0"
apscheduler = "^3.10.4"
python-notifier = "^1.0.0"
aiohttp = "^3.9.3"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 